# MathGPT

./: .gitignore  A800_TRAINING_REPORT.md  A800_TRAINING_REPORT_v2.md  EVAL_REPORT_SFT_V2.json  EVAL_REPORT_SFT_V2.md  README.md  TRAINING_LOG.md  fix_hf_dataset.md  nanochat_readme.md  pyproject.toml
docs/: NEXT_STEPS_IMPROVEMENT.md  PROBABILITY_THROUGH_PYTORCH.md  PROJECT_INTRO_FOR_BEGINNERS.md  RL_SFT_GRPO_INTRO.md  SFT_TO_GRPO_NARRATIVE.md  fable5_readme.txt
docs/images/prob/: make_figs.py  make_figs2.py  make_figs3.py  make_figs4.py
improved/: __init__.py  gsm8k_reward.py  rl_grpo_core.py  train_rl.patch.md
math_gpt/: __init__.py  compat.py  ui.html
nanochat/: engine.py  flash_attention.py  gpt.py  optim.py
reports/: EVAL_REPORT_RL_V2.json  EVAL_REPORT_RL_V2.md
scripts/: base_train.py  chat_cli.py  chat_eval.py  chat_sft.py  chat_web.py  download_hf_datasets.py  eval_report.py  full_train.sh  full_train_a800.sh  full_train_a800_v2.sh  rft_bootstrap.py  run.py  train_rl.py
tasks/: arc.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py
